[gd_scene load_steps=13 format=3 uid="uid://d0kc4135ua778"]

[ext_resource type="FontFile" uid="uid://vxbfcnef0pvq" path="res://assets/fonts/Rubik-Bold.ttf" id="1_gchx3"]
[ext_resource type="Script" uid="uid://c5g5ifvvi8brj" path="res://scenes/pause_screen.gd" id="2_qeunj"]
[ext_resource type="Shader" uid="uid://cl4sba8rav4mj" path="res://scenes/blur.gdshader" id="3_hr2n2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tefeu"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ya4ey"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.5803922, 0.23137255, 0.3764706, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85g3d"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.22745098, 0.38039216, 0.32156864, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6xl0"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.05882353, 0.2, 0.14509805, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_choun"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.5803922, 0.23137255, 0.3764706, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0, 0, 0, 0.88235295)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Theme" id="Theme_85g3d"]
default_font = ExtResource("1_gchx3")
default_font_size = 18
Button/font_sizes/font_size = 42
Button/styles/disabled = SubResource("StyleBoxFlat_tefeu")
Button/styles/focus = SubResource("StyleBoxFlat_ya4ey")
Button/styles/hover = SubResource("StyleBoxFlat_85g3d")
Button/styles/normal = SubResource("StyleBoxFlat_o6xl0")
Button/styles/pressed = SubResource("StyleBoxFlat_choun")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_tipki")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_27awe"]
shader = ExtResource("3_hr2n2")
shader_parameter/blur_amount = 1.3
shader_parameter/tint = Color(0, 0, 0, 1)
shader_parameter/tint_strength = 0.1
shader_parameter/saturation = 0.30000000000000004

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hr2n2"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0, 0, 0, 0.88235295)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 7

[node name="PauseScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_85g3d")
script = ExtResource("2_qeunj")

[node name="BlurColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_27awe")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UIPanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = -152.5
offset_right = 187.0
offset_bottom = 296.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hr2n2")

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIPanelContainer/VBoxContainer"]
layout_mode = 2
text = "TRYPOPHOBIA üëæüí£üëÅÔ∏è"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="UIPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanelContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ResumeButton" type="Button" parent="UIPanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Resume Game"

[node name="PlayBotButton" type="Button" parent="UIPanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play Bot"

[node name="PlayFriendButton" type="Button" parent="UIPanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pass & Play"

[node name="InfoButton" type="Button" parent="UIPanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Info"

[node name="QuitButton" type="Button" parent="UIPanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="InfoContainer" type="ScrollContainer" parent="UIPanelContainer"]
layout_mode = 2

[node name="InfoLabel" type="RichTextLabel" parent="UIPanelContainer/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 14
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/mono_font_size = 14
bbcode_enabled = true
